--- a/Compilers2025Documentation.html
+++ b/Compilers2025Documentation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Your New Programming Language - Documentation</title>
+<title>Algolang - Documentation</title>
 <style>
 body {
     font-family: sans-serif;
