--- a/Compilers2025Documentation.html
+++ b/Compilers2025Documentation.html
@@ -81,6 +81,8 @@ code {
         <li><a href="#data-structures">Data Structures</a></li>
         <li><a href="#typing-scoping">Typing & Scoping</a></li>
         <li><a href="#advanced">Advanced Features</a></li>
+        <li><a href="#future">Future Directions</a></li>
+        <li><a href="#metrics">Performance Metrics</a></li>
         <li><a href="#examples">Examples</a></li>
     </ul>
 </div>
@@ -100,6 +102,8 @@ code {
           <li>Nimitt</li>
         </ul>
         <p> This language was developed as a project in the course Compilers (2025) at IIT Gandhinagar.</p>
+
+        <p>If you are interested in understanding the way this language works, refer to the <a href="DeveloperDocumentation.html">Developer Documentation</a>.</p>
     </div>
 
     <div id="getting-started" class="content-page">
